[package]
name = "sparsesuite_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.119"
lapacke = "0.5.0"
rand = "0.8.5"

[lib]
name = "sparse"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.59.2"